# ansible-collection-hpc

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .pre-commit-hook.yaml  CHANGELOG.rst  Jenkinsfile  README.md  flake.nix  galaxy.yml
.github/workflows/: ci.yml
meta/: runtime.yml
nix/: pyproject.toml
plugins/filter/: slurm_conf.py
plugins/modules/: slurm.py
roles/: .ansible-lint
roles/beegfs_client/: README.md
roles/beegfs_client/defaults/: main.yml
roles/beegfs_client/handlers/: main.yml
roles/beegfs_client/meta/: main.yml
roles/beegfs_client/tasks/: main.yml
roles/beegfs_client/templates/: beegfs-mounts.conf.j2  connInterfacesFile.j2
roles/beegfs_client/vars/: main.yml
roles/certificate/: .ansible-lint  README.md
roles/certificate/defaults/: main.yml
roles/certificate/meta/: main.yml
roles/certificate/tasks/: create.yml  main.yml
roles/certificate/vars/: main.yml
roles/cluster-infra/: README.md
roles/cluster-infra/defaults/: main.yml
roles/container/: README.md
roles/cuda/: README.md
roles/dns/: README.md
roles/doca/: README.md
roles/firewalld/: .gitignore  README.md
roles/goss/: README.md
roles/lmod/: README.md
roles/multirail/: README.md
roles/nhc/: README.md
roles/ntp/: README.md
roles/promtail/: README.md
roles/rocev2/: README.md
roles/slurm/: .ansible-lint  README.md
roles/sssd/: .ansible-lint  README.md
roles/sudoers/: README.md
roles/syslog/: README.md
roles/user/: README.md
roles/userenv/: README.md
tests/sanity/: ignore-2.10.txt  ignore-2.15.txt  ignore-2.17.txt
(+328 files in other folders)
