[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-2.20"
version = "0.1.0"
description = "Ansible env for 2026 deployment"
requires-python = ">=3.12"
dependencies = [ ]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
  {include-group = "api"},
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "lsp"},
]
run = [
 "ansible-compat==25.12.0",
 "ansible-core==2.20.2",
]
api = [
  "requests==2.32.5",
]
lsp = [
  "python-lsp-server==1.14.0",
]
lint = [
  "rstcheck==6.2.5",
  "pycodestyle==2.14.0",
]
test = [
  "molecule==25.12.0",
  "molecule-plugins==25.8.12",
  "docker==7.1.0",
  "pytest-testinfra==10.2.2",
  "pytest==9.0.2",
]
